<resources>
  <string name="app_name">Libre de Estrés</string>
  <string name="title_home">Definición</string>
  <string name="title_estres1">Causas</string>
  <string name="title_dashboard">Soluciones</string>
  <string name="title_estres">Consumo excesivo de cafeína</string>
  <string name="factor_estres1">Consumo excesivo de cafeína</string>
  <string name="factor_estres2">Consumo de alimentos con alta concentración de azucares</string>
  <string name="factor_estres3">Consumo de alimentos con alta concentración de grasas saturadas</string>
  <string name="factor_estres4">Consumo de alimentos con alta concentración de grasas trans</string>
  <string name="factor_estres5">Ruido</string>
  <string name="factor_estres6">Sobresfuerzo</string>
  <string name="factor_estres7">Malas posturas</string>
  <string name="factor_estres8">Temperaturas extremas</string>
  <string name="factor_estres9">Hambre</string>
  <string name="factor_estres10">Falta de sueño</string>
  <string name="factor_estres11">Mudanzas y obras en casa</string>
  <string name="factor_estres12">Exámenes</string>
  <string name="factor_estres13">Problemas de pareja</string>
  <string name="factor_estres14">Desempleo</string>
  <string name="factor_estres15">Muerte o enfermedad grave de un ser querido</string>
  <string name="factor_estres16">Retos en el trabajo</string>
  <string name="factor_estres17">Discusiones laborales o familiares</string>
  <string name="factor_estres18">Competitividad</string>
  <string name="factor_estres19">Atascos de tráfico</string>
  <string name="factor_estres20">Falta de tiempo para realizar tareas y para dedicar al ocio</string>
  <string name="factor_anti_estres1">Golpear una almohada</string>
  <string name="factor_anti_estres2">Lanzar bolas de papel</string>
  <string name="factor_anti_estres3">Escribir la frustración que siente</string>
  <string name="factor_anti_estres4">Escribir la preocupación que siente</string>
  <string name="factor_anti_estres5">Escuchar música del genero rock</string>
  <string name="factor_anti_estres6">Escuchar música del genero clásico</string>
  <string name="factor_anti_estres7">Resolver un rompecabezas</string>
  <string name="factor_anti_estres8">Respirar profundamente</string>
  <string name="factor_anti_estres9">Gritar</string>
  <string name="factor_anti_estres10">Meditar</string>
  <string name="factor_anti_estres11">Hacer ejercicio físico</string>
  <string name="factor_anti_estres12">Mover el cuerpo</string>
  <string name="categoria_musical1">Música Clásica</string>
  <string name="categoria_musical2">Música Jazz</string>
  <string name="categoria_musical3">Música Rock</string>
  <string name="tool_anti_estres1">Musicoterapia</string>
  <string name="tool_anti_estres2">Juegos de rompecabezas</string>
  <string name="tool_anti_estres3">Escribir a mano</string>
  <string name="todo">todo</string>
  <string name="title_categoria_musical">Elige un genero musical:</string>
  <string name="title_habitos_anti_estres">Hábitos que disminuyen el estrés:</string>
  <string name="title_habitos_factor_estres">Factores que provocan el estrés:</string>
  <string name="title_tools_anti_estres">Elige una herramienta para eliminar el estrés:</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="tools">Herramientas</string>
  <string name="message_plantilla">Escribe en una hoja de papel la siguiente plantilla a continuación:</string>
  <string name="sentimientos">¿Qué sientes en este momento?</string>
  <string name="nivel_estre1">Califica el estrés que sientes del 1 al 5</string>
  <string name="nivel_estre2">(1 es leve y 5 es a punto de estallar)</string>
  <string name="causa">¿Cuál es la causa o el origen?</string>
  <string name="posibles_soluciones">Posibles soluciones</string>
  <string name="solucion_1">1</string>
  <string name="solucion_2">2</string>
  <string name="solucion_3">3</string>
  <string name="message_streaming">Elige una transmisión musical:</string>
  <string name="titulo_definicion"><u>Estrés</u></string>
  <string name="definicion_estres">Proviene de la adaptación gráfica de la voz inglesa stress, tensión provocada por situaciones agobiantes y que origina reacciones psicosomáticas.</string>
  <string name="autor_estres">Real Academia Española. (2005). Diccionario panhispánico de dudas. Recuperado de http://lema.rae.es/dpd/srv/search?key=estr%E9s</string>
  <string name="mi_tercera_solucion">Mi tercera solución</string>
  <string name="mi_segunda_solucion">Mi segunda solución</string>
  <string name="mi_primera_solucion">Mi primera solución</string>
  <string name="mi_causa">Mi causa</string>
  <string name="mi_nivel_de_estres">5</string>
  <string name="mis_sentimientos">Mis sentimientos</string>
</resources>
