<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context=".PlantillaEscritura">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorMorado"
    android:orientation="vertical">
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:text="@string/message_plantilla"
      android:textColor="@color/colorBlanco"
      android:textSize="@dimen/text_size_medium" />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:text="@string/sentimientos"
      android:textColor="@color/colorBlanco"
      android:textSize="@dimen/text_size_medium" />
    <EditText
      android:id="@+id/et_sentimientos"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:ems="10"
      android:gravity="start|top"
      android:hint="@string/mis_sentimientos"
      android:importantForAutofill="no"
      android:inputType="textMultiLine"
      android:textColor="@color/colorBlanco"
      android:textColorHint="@color/colorHintBlanco" />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:orientation="vertical">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel_estre1"
        android:textColor="@color/colorBlanco"
        android:textSize="@dimen/text_size_medium" />
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nivel_estre2"
        android:textColor="@color/colorBlanco"
        android:textSize="@dimen/text_size_medium" />
      <EditText
        android:id="@+id/et_nivel_estres"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/mi_nivel_de_estres"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorBlanco"
        android:textColorHint="@color/colorHintBlanco" />
    </LinearLayout>
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:text="@string/causa"
      android:textColor="@color/colorBlanco"
      android:textSize="@dimen/text_size_medium" />
    <EditText
      android:id="@+id/et_causa"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:ems="10"
      android:gravity="start|top"
      android:hint="@string/mi_causa"
      android:importantForAutofill="no"
      android:inputType="textMultiLine"
      android:textColor="@color/colorBlanco"
      android:textColorHint="@color/colorHintBlanco" />
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:text="@string/posibles_soluciones"
      android:textColor="@color/colorBlanco"
      android:textSize="@dimen/text_size_medium" />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solucion_1"
        android:textColor="@color/colorBlanco"
        android:textSize="@dimen/text_size_medium" />
      <EditText
        android:id="@+id/et_solucion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mi_primera_solucion"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        android:textColorHint="@color/colorHintBlanco" />
    </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solucion_2"
        android:textColor="@color/colorBlanco"
        android:textSize="@dimen/text_size_medium" />
      <EditText
        android:id="@+id/et_solucion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mi_segunda_solucion"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        android:textColorHint="@color/colorHintBlanco" />
    </LinearLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solucion_3"
        android:textColor="@color/colorBlanco"
        android:textSize="@dimen/text_size_medium" />
      <EditText
        android:id="@+id/et_solucion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mi_tercera_solucion"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorBlanco"
        android:textColorHint="@color/colorHintBlanco" />
    </LinearLayout>
  </LinearLayout>
</ScrollView>
