<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/colorNaranja"
  android:orientation="vertical"
  tools:context=".Home">
  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/component_margin16"
    android:layout_marginBottom="@dimen/component_margin8"
    android:layout_marginLeft="@dimen/component_margin16"
    android:layout_marginRight="@dimen/component_margin16"
    app:cardBackgroundColor="@color/colorMorado"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">
    <TextView
      android:id="@+id/tv_titulo_definicion"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/component_margin16"
      android:text="@string/titulo_definicion"
      android:textColor="@color/colorBlanco"
      android:textSize="18sp" />
  </androidx.cardview.widget.CardView>
  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/component_margin8"
    android:layout_marginLeft="@dimen/component_margin16"
    android:layout_marginRight="@dimen/component_margin16"
    app:cardBackgroundColor="@color/colorMorado"
    app:cardCornerRadius="20dp"
    app:cardElevation="20dp">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        android:id="@+id/tv_definicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_margin16"
        android:text="@string/definicion_estres"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp" />
      <TextView
        android:id="@+id/tv_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_margin16"
        android:text="@string/autor_estres"
        android:textColor="@color/colorBlanco"
        android:textSize="18sp" />
    </LinearLayout>
  </androidx.cardview.widget.CardView>
  <ImageView
    android:id="@+id/iv_background_definicion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/component_margin16"
    android:contentDescription="@string/todo"
    android:scaleType="fitCenter"
    android:src="@drawable/ic_libros" />
</LinearLayout>